--- a/index.html
+++ b/index.html
@@ -9,8 +9,9 @@
     <title>Laptops: Because I felt like it</title>
 </head>
 <body>
-    <p class="text">
+    <pg class="text">
         <center>There are many different types of laptops</center>
-    </p>
+    </pg>
+        <img class="image" src="media/mcbook.webp" alt="">
 </body>
 </html>
