--- a/index.html
+++ b/index.html
@@ -9,9 +9,11 @@
     <title>Laptops: Because I felt like it</title>
 </head>
 <body>
+    <div class="positions">
     <pg class="text">
         <center>There are many different types of laptops</center>
     </pg>
+    </div>    
         <img class="image" src="media/mcbook.webp" alt="">
 </body>
 </html>
